--- a/sf.ipynb
+++ b/sf.ipynb
@@ -38,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -77,12 +79,131 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from gym import Env\n",
+    "from gym.spaces import MultiBinary, Box\n",
+    "import numpy as np\n",
+    "import cv2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class StreetFighter(Env):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.observation_space = Box(low=0, high=255, shape=(84,84,1), dtype=np.uint8)\n",
+    "        self.action_space = MultiBinary(12)\n",
+    "        self.game = env = retro.make(game='StreetFighterIISpecialChampionEdition-Genesis', use_restricted_actions=retro.Actions.FILTERED)\n",
+    "        \n",
+    "    def step(self, action):\n",
+    "        obs, reward, done, info = self.game.step(action)\n",
+    "        obs = self.preprocess(obs)\n",
+    "        \n",
+    "        frame_delta = obs - self.previous_frame\n",
+    "        self.previous_frame = obs\n",
+    "        \n",
+    "        reward = info['score'] - self.score\n",
+    "        self.score = info['score']\n",
+    "        \n",
+    "        return frame_delta, reward, done, info\n",
+    "    \n",
+    "    def render(self):\n",
+    "        self.game.render()\n",
+    "    \n",
+    "    def reset(self):\n",
+    "        obs = self.game.reset()\n",
+    "        obs = self.preprocess(obs)\n",
+    "        self.previous_frame = obs\n",
+    "        self.score = 0\n",
+    "        return obs\n",
+    "    \n",
+    "    def preprocess(self, observation):\n",
+    "        gray = cv2.cvtColor(observation, cv2.COLOR_BGR2GRAY)\n",
+    "        resize = cv2.resize(gray, (84,84), interpolation = cv2.INTER_CUBIC)\n",
+    "        channels = np.reshape(resize, (84,84,1))\n",
+    "        return channels\n",
+    "    \n",
+    "    def close(self):\n",
+    "        self.game.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import optuna\n",
+    "from stable_baselines3 import PPO\n",
+    "from stable_baselines3.common.evaluation import evaluate_policy\n",
+    "from stable_baselines3.common.monitor import Monitor\n",
+    "from stable_baselines3.common.vec_env import DummyVecEnv, VecFrameStack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LOG_DIR = './logs/'\n",
+    "OPT_DIR = './opt/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def optimize_ppo(trial):\n",
+    "    return {\n",
+    "        'n_steps': trial.suggest_int('n_steps', 2048, 8192),\n",
+    "        'gamma': trial.suggest_loguniform('gamma', 0.8, 0.9999),\n",
+    "        'learning_rate': trial.suggest_loguniform('learning_rate', 1e-5, 1e-4),\n",
+    "        'clip_range': trial.suggest_uniform('clip_range', 0.1, 0.4),\n",
+    "        'gae_lambda': trial.suggest_uniform('gae_lambda', 0.8, 0.99)\n",
+    "    } "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def optimize_agent(trial):\n",
+    "    try:\n",
+    "        model_params = optimize_ppo(trial)\n",
+    "        \n",
+    "        env = StreetFighter\n",
+    "        env = Monitor(env, LOG_DIR)\n",
+    "        env = DummyVecEnv([lambda: env])\n",
+    "        env = VecFrameStack(env, 4, channels_order='last')\n",
+    "        \n",
+    "        model = PPO('CnnPolicy', env, tensorboard_log = LOG_DIR, verbose = 0, **model_params)\n",
+    "        model.learn(total_timesteps = 100000)\n",
+    "        \n",
+    "        mean_reward, _ = evaluate_policy(model, env, n_eval_episodes=5)\n",
+    "        env.close()\n",
+    "        \n",
+    "        SAVE_PATH = os.path.join(OPT_DIR, 'tiral_{}_best_mmodel'.format(trial.number))\n",
+    "        model.save(SAVE_PATH)\n",
+    "        \n",
+    "        return mean_reward\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        return -1000"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -96,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
