--- a/sf.ipynb
+++ b/sf.ipynb
@@ -2,93 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import retro\n",
     "import time\n",
+    "from gym import Env\n",
+    "from gym.spaces import MultiBinary, Box\n",
+    "import numpy as np\n",
+    "import cv2\n",
+    "import optuna\n",
+    "from stable_baselines3 import PPO\n",
+    "from stable_baselines3.common.evaluation import evaluate_policy\n",
+    "from stable_baselines3.common.monitor import Monitor\n",
+    "from stable_baselines3.common.vec_env import DummyVecEnv, VecFrameStack\n",
+    "from matplotlib import pyplot as plt\n",
+    "import os\n",
     "\n",
     "#Troubleshooting\n",
     "#!python --version\n",
     "#%pip list\n",
-    "#pip install gym\n",
-    "#pip install gym-retro\n",
+    "#%pip install gym\n",
+    "#%pip install gym-retro\n",
     "#!python -m retro.import StreetFighterIISpecialChampionEdition-Genesis.md"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env = retro.make(game='StreetFighterIISpecialChampionEdition-Genesis')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "env.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception ignored on calling ctypes callback function: <function Win32Window._get_window_proc.<locals>.f at 0x000001C8A7832550>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Gaurav\\anacondaWrapper\\envs\\Python38\\lib\\site-packages\\pyglet\\window\\win32\\__init__.py\", line 738, in f\n",
-      "    def f(hwnd, msg, wParam, lParam):\n",
-      "KeyboardInterrupt: \n",
-      "Exception ignored on calling ctypes callback function: <function Win32Window._get_window_proc.<locals>.f at 0x000001C8A7832550>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Gaurav\\anacondaWrapper\\envs\\Python38\\lib\\site-packages\\pyglet\\window\\win32\\__init__.py\", line 738, in f\n",
-      "    def f(hwnd, msg, wParam, lParam):\n",
-      "KeyboardInterrupt: \n"
-     ]
-    }
-   ],
-   "source": [
-    "#show env\n",
-    "\n",
-    "obs = env.reset()\n",
-    "done = False\n",
-    "for game in range(1):\n",
-    "    while not done:\n",
-    "        if done:\n",
-    "            obs = env.reset()\n",
-    "        env.render()\n",
-    "        time.sleep(1/60)\n",
-    "        obs, reward, done, info = env.step(env.action_space.sample())\n",
-    "        print(reward)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from gym import Env\n",
-    "from gym.spaces import MultiBinary, Box\n",
-    "import numpy as np\n",
-    "import cv2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,19 +76,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "import optuna\n",
-    "from stable_baselines3 import PPO\n",
-    "from stable_baselines3.common.evaluation import evaluate_policy\n",
-    "from stable_baselines3.common.monitor import Monitor\n",
-    "from stable_baselines3.common.vec_env import DummyVecEnv, VecFrameStack"
+    "#test render\n",
+    "frames = 0\n",
+    "env = StreetFighter()\n",
+    "obs = env.reset()\n",
+    "while True:\n",
+    "    if frames > 10000:\n",
+    "        break\n",
+    "    obs, rew, done, info = env.step(env.action_space.sample())\n",
+    "    env.render()\n",
+    "    frames += 1\n",
+    "    if done:\n",
+    "        obs = env.reset()\n",
+    "\n",
+    "env.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +133,7 @@
     "    try:\n",
     "        model_params = optimize_ppo(trial)\n",
     "        \n",
-    "        env = StreetFighter\n",
+    "        env = StreetFighter()\n",
     "        env = Monitor(env, LOG_DIR)\n",
     "        env = DummyVecEnv([lambda: env])\n",
     "        env = VecFrameStack(env, 4, channels_order='last')\n",
@@ -197,13 +150,133 @@
     "        return mean_reward\n",
     "    \n",
     "    except Exception as e:\n",
-    "        return -1000"
+    "        return -1000\n",
+    "    \n",
+    "    \n",
+    "# def optimize_agent(trial):\n",
+    "#     try:\n",
+    "#         model_params = optimize_ppo(trial) \n",
+    "\n",
+    "#         # Create environment \n",
+    "#         env = StreetFighter()\n",
+    "#         env = Monitor(env, LOG_DIR)\n",
+    "#         env = DummyVecEnv([lambda: env])\n",
+    "#         env = VecFrameStack(env, 4, channels_order='last')\n",
+    "\n",
+    "#         # Create algo \n",
+    "#         model = PPO('CnnPolicy', env, tensorboard_log=LOG_DIR, verbose=0, **model_params)\n",
+    "#         model.learn(total_timesteps=30000)\n",
+    "#         #model.learn(total_timesteps=100000)\n",
+    "\n",
+    "#         # Evaluate model \n",
+    "#         mean_reward, _ = evaluate_policy(model, env, n_eval_episodes=5)\n",
+    "#         env.close()\n",
+    "\n",
+    "#         SAVE_PATH = os.path.join(OPT_DIR, 'trial_{}_best_model'.format(trial.number))\n",
+    "#         model.save(SAVE_PATH)\n",
+    "\n",
+    "#         return mean_reward\n",
+    "\n",
+    "#     except Exception as e:\n",
+    "        \n",
+    "#         return -1000"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m[I 2023-05-06 16:45:08,424]\u001b[0m A new study created in memory with name: no-name-ea5744ee-6443-492b-a632-fb2b363af41c\u001b[0m\n",
+      "C:\\Users\\Gaurav\\AppData\\Local\\Temp\\ipykernel_15848\\2619255570.py:4: FutureWarning: suggest_loguniform has been deprecated in v3.0.0. This feature will be removed in v6.0.0. See https://github.com/optuna/optuna/releases/tag/v3.0.0. Use :func:`~optuna.trial.Trial.suggest_float` instead.\n",
+      "  'gamma': trial.suggest_loguniform('gamma', 0.8, 0.9999),\n",
+      "C:\\Users\\Gaurav\\AppData\\Local\\Temp\\ipykernel_15848\\2619255570.py:5: FutureWarning: suggest_loguniform has been deprecated in v3.0.0. This feature will be removed in v6.0.0. See https://github.com/optuna/optuna/releases/tag/v3.0.0. Use :func:`~optuna.trial.Trial.suggest_float` instead.\n",
+      "  'learning_rate': trial.suggest_loguniform('learning_rate', 1e-5, 1e-4),\n",
+      "C:\\Users\\Gaurav\\AppData\\Local\\Temp\\ipykernel_15848\\2619255570.py:6: FutureWarning: suggest_uniform has been deprecated in v3.0.0. This feature will be removed in v6.0.0. See https://github.com/optuna/optuna/releases/tag/v3.0.0. Use :func:`~optuna.trial.Trial.suggest_float` instead.\n",
+      "  'clip_range': trial.suggest_uniform('clip_range', 0.1, 0.4),\n",
+      "C:\\Users\\Gaurav\\AppData\\Local\\Temp\\ipykernel_15848\\2619255570.py:7: FutureWarning: suggest_uniform has been deprecated in v3.0.0. This feature will be removed in v6.0.0. See https://github.com/optuna/optuna/releases/tag/v3.0.0. Use :func:`~optuna.trial.Trial.suggest_float` instead.\n",
+      "  'gae_lambda': trial.suggest_uniform('gae_lambda', 0.8, 0.99)\n",
+      "C:\\Users\\Gaurav\\anacondaWrapper\\envs\\Python38\\lib\\site-packages\\stable_baselines3\\ppo\\ppo.py:148: UserWarning: You have specified a mini-batch size of 64, but because the `RolloutBuffer` is of size `n_steps * n_envs = 3263`, after every 50 untruncated mini-batches, there will be a truncated mini-batch of size 63\n",
+      "We recommend using a `batch_size` that is a factor of `n_steps * n_envs`.\n",
+      "Info: (n_steps=3263 and n_envs=1)\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\Gaurav\\anacondaWrapper\\envs\\Python38\\lib\\site-packages\\stable_baselines3\\common\\save_util.py:278: UserWarning: Path 'opt' does not exist. Will create it.\n",
+      "  warnings.warn(f\"Path '{path.parent}' does not exist. Will create it.\")\n",
+      "\u001b[32m[I 2023-05-06 16:48:41,702]\u001b[0m Trial 0 finished with value: 2000.0 and parameters: {'n_steps': 3263, 'gamma': 0.9307606182488234, 'learning_rate': 3.7920860371647525e-05, 'clip_range': 0.13892361577235163, 'gae_lambda': 0.9288354759011572}. Best is trial 0 with value: 2000.0.\u001b[0m\n",
+      "C:\\Users\\Gaurav\\anacondaWrapper\\envs\\Python38\\lib\\site-packages\\stable_baselines3\\ppo\\ppo.py:148: UserWarning: You have specified a mini-batch size of 64, but because the `RolloutBuffer` is of size `n_steps * n_envs = 2558`, after every 39 untruncated mini-batches, there will be a truncated mini-batch of size 62\n",
+      "We recommend using a `batch_size` that is a factor of `n_steps * n_envs`.\n",
+      "Info: (n_steps=2558 and n_envs=1)\n",
+      "  warnings.warn(\n",
+      "\u001b[32m[I 2023-05-06 16:51:33,618]\u001b[0m Trial 1 finished with value: 0.0 and parameters: {'n_steps': 2558, 'gamma': 0.956940394901538, 'learning_rate': 8.690822781252523e-05, 'clip_range': 0.16554785534276933, 'gae_lambda': 0.8368860111403889}. Best is trial 0 with value: 2000.0.\u001b[0m\n",
+      "C:\\Users\\Gaurav\\anacondaWrapper\\envs\\Python38\\lib\\site-packages\\stable_baselines3\\ppo\\ppo.py:148: UserWarning: You have specified a mini-batch size of 64, but because the `RolloutBuffer` is of size `n_steps * n_envs = 4796`, after every 74 untruncated mini-batches, there will be a truncated mini-batch of size 60\n",
+      "We recommend using a `batch_size` that is a factor of `n_steps * n_envs`.\n",
+      "Info: (n_steps=4796 and n_envs=1)\n",
+      "  warnings.warn(\n",
+      "\u001b[32m[I 2023-05-06 16:55:03,308]\u001b[0m Trial 2 finished with value: 2400.0 and parameters: {'n_steps': 4796, 'gamma': 0.9631600672766325, 'learning_rate': 2.275812530733834e-05, 'clip_range': 0.2232201663641259, 'gae_lambda': 0.9765747833553448}. Best is trial 2 with value: 2400.0.\u001b[0m\n",
+      "C:\\Users\\Gaurav\\anacondaWrapper\\envs\\Python38\\lib\\site-packages\\stable_baselines3\\ppo\\ppo.py:148: UserWarning: You have specified a mini-batch size of 64, but because the `RolloutBuffer` is of size `n_steps * n_envs = 4977`, after every 77 untruncated mini-batches, there will be a truncated mini-batch of size 49\n",
+      "We recommend using a `batch_size` that is a factor of `n_steps * n_envs`.\n",
+      "Info: (n_steps=4977 and n_envs=1)\n",
+      "  warnings.warn(\n",
+      "\u001b[32m[I 2023-05-06 16:58:30,387]\u001b[0m Trial 3 finished with value: 0.0 and parameters: {'n_steps': 4977, 'gamma': 0.8928783747463812, 'learning_rate': 2.2232461421044135e-05, 'clip_range': 0.2567604156387272, 'gae_lambda': 0.8892028000790562}. Best is trial 2 with value: 2400.0.\u001b[0m\n",
+      "C:\\Users\\Gaurav\\anacondaWrapper\\envs\\Python38\\lib\\site-packages\\stable_baselines3\\ppo\\ppo.py:148: UserWarning: You have specified a mini-batch size of 64, but because the `RolloutBuffer` is of size `n_steps * n_envs = 7209`, after every 112 untruncated mini-batches, there will be a truncated mini-batch of size 41\n",
+      "We recommend using a `batch_size` that is a factor of `n_steps * n_envs`.\n",
+      "Info: (n_steps=7209 and n_envs=1)\n",
+      "  warnings.warn(\n",
+      "\u001b[32m[I 2023-05-06 17:01:49,323]\u001b[0m Trial 4 finished with value: 2000.0 and parameters: {'n_steps': 7209, 'gamma': 0.8010079897466873, 'learning_rate': 3.0736545304569517e-05, 'clip_range': 0.3766052679454237, 'gae_lambda': 0.8777007261431269}. Best is trial 2 with value: 2400.0.\u001b[0m\n",
+      "C:\\Users\\Gaurav\\anacondaWrapper\\envs\\Python38\\lib\\site-packages\\stable_baselines3\\ppo\\ppo.py:148: UserWarning: You have specified a mini-batch size of 64, but because the `RolloutBuffer` is of size `n_steps * n_envs = 8139`, after every 127 untruncated mini-batches, there will be a truncated mini-batch of size 11\n",
+      "We recommend using a `batch_size` that is a factor of `n_steps * n_envs`.\n",
+      "Info: (n_steps=8139 and n_envs=1)\n",
+      "  warnings.warn(\n",
+      "\u001b[32m[I 2023-05-06 17:05:15,420]\u001b[0m Trial 5 finished with value: 2500.0 and parameters: {'n_steps': 8139, 'gamma': 0.9400609478505666, 'learning_rate': 5.4362861610427684e-05, 'clip_range': 0.2601449392845804, 'gae_lambda': 0.9480421495789323}. Best is trial 5 with value: 2500.0.\u001b[0m\n",
+      "C:\\Users\\Gaurav\\anacondaWrapper\\envs\\Python38\\lib\\site-packages\\stable_baselines3\\ppo\\ppo.py:148: UserWarning: You have specified a mini-batch size of 64, but because the `RolloutBuffer` is of size `n_steps * n_envs = 4170`, after every 65 untruncated mini-batches, there will be a truncated mini-batch of size 10\n",
+      "We recommend using a `batch_size` that is a factor of `n_steps * n_envs`.\n",
+      "Info: (n_steps=4170 and n_envs=1)\n",
+      "  warnings.warn(\n",
+      "\u001b[32m[I 2023-05-06 17:08:32,696]\u001b[0m Trial 6 finished with value: 4000.0 and parameters: {'n_steps': 4170, 'gamma': 0.9030455106910048, 'learning_rate': 1.9833051010355016e-05, 'clip_range': 0.35099495390961943, 'gae_lambda': 0.9468706121170825}. Best is trial 6 with value: 4000.0.\u001b[0m\n",
+      "C:\\Users\\Gaurav\\anacondaWrapper\\envs\\Python38\\lib\\site-packages\\stable_baselines3\\ppo\\ppo.py:148: UserWarning: You have specified a mini-batch size of 64, but because the `RolloutBuffer` is of size `n_steps * n_envs = 4893`, after every 76 untruncated mini-batches, there will be a truncated mini-batch of size 29\n",
+      "We recommend using a `batch_size` that is a factor of `n_steps * n_envs`.\n",
+      "Info: (n_steps=4893 and n_envs=1)\n",
+      "  warnings.warn(\n",
+      "\u001b[32m[I 2023-05-06 17:11:50,347]\u001b[0m Trial 7 finished with value: 2600.0 and parameters: {'n_steps': 4893, 'gamma': 0.9591725187028397, 'learning_rate': 5.077368109356538e-05, 'clip_range': 0.1189754887960358, 'gae_lambda': 0.8814493813893174}. Best is trial 6 with value: 4000.0.\u001b[0m\n",
+      "C:\\Users\\Gaurav\\anacondaWrapper\\envs\\Python38\\lib\\site-packages\\stable_baselines3\\ppo\\ppo.py:148: UserWarning: You have specified a mini-batch size of 64, but because the `RolloutBuffer` is of size `n_steps * n_envs = 2736`, after every 42 untruncated mini-batches, there will be a truncated mini-batch of size 48\n",
+      "We recommend using a `batch_size` that is a factor of `n_steps * n_envs`.\n",
+      "Info: (n_steps=2736 and n_envs=1)\n",
+      "  warnings.warn(\n",
+      "\u001b[32m[I 2023-05-06 17:15:09,210]\u001b[0m Trial 8 finished with value: 20400.0 and parameters: {'n_steps': 2736, 'gamma': 0.9015097065796258, 'learning_rate': 2.6318621773664065e-05, 'clip_range': 0.10683073267123747, 'gae_lambda': 0.948397818793868}. Best is trial 8 with value: 20400.0.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Gaurav\\anacondaWrapper\\envs\\Python38\\lib\\site-packages\\stable_baselines3\\ppo\\ppo.py:148: UserWarning: You have specified a mini-batch size of 64, but because the `RolloutBuffer` is of size `n_steps * n_envs = 6749`, after every 105 untruncated mini-batches, there will be a truncated mini-batch of size 29\n",
+      "We recommend using a `batch_size` that is a factor of `n_steps * n_envs`.\n",
+      "Info: (n_steps=6749 and n_envs=1)\n",
+      "  warnings.warn(\n",
+      "\u001b[32m[I 2023-05-06 17:18:42,773]\u001b[0m Trial 9 finished with value: 4200.0 and parameters: {'n_steps': 6749, 'gamma': 0.8530391376461304, 'learning_rate': 4.538756147210725e-05, 'clip_range': 0.11635498231932431, 'gae_lambda': 0.9795911164556375}. Best is trial 8 with value: 20400.0.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "study = optuna.create_study(direction = 'maximize')\n",
+    "study.optimize(optimize_agent, n_trials = 10, n_jobs = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -217,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.16"
   },
   "vscode": {
    "interpreter": {
